--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -7,6 +7,14 @@
     <!-- customized head to avoid printing website title-->
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ escape }}</a>
 
+    <div class="dropdown">
+      <button class="dropbtn">Version: <small>1.1.2</small></button>
+      <div class="dropdown-content">
+        <a href="https://apexrms.github.io/omniscape">Latest</a>
+        <a href="./"><b>1.1.2</b></a>
+      </div>
+    </div>
+
     {%- if titles_size > 0 -%}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
